# switchboard-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MIGRATION_REPORT.md  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: skill.md
src/: main.rs
src/cli/: access.rs  analytics.rs  auth.rs  completions.rs  config.rs  docs.rs  drives.rs  field_editor.rs  groups.rs  guide.rs  helpers.rs  import_export.rs  init.rs  interactive.rs  introspect.rs  jobs.rs  mod.rs  models.rs  mutate.rs  ops.rs  query.rs  schema.rs  sync.rs  update.rs  visualize.rs  watch.rs
src/config/: mod.rs  profiles.rs
src/graphql/: client.rs  introspection.rs  mod.rs  websocket.rs
src/output/: json.rs  mermaid.rs  mod.rs  png.rs  svg.rs  table.rs  tree.rs
src/phd/: mod.rs  reader.rs  types.rs  writer.rs
tests/: cli_integration.rs
