[package]
name = "switchboard-cli"
version = "0.0.0-staging.2"
edition = "2024"
description = "A standalone CLI for interacting with Switchboard GraphQL instances"
license = "MIT"

[[bin]]
name = "switchboard"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Interactive prompts
dialoguer = "0.11"

# Output formatting
comfy-table = "7"
colored = "3"

# SVG → PNG rasterization
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"

# Config directories
dirs = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# .phd file support (ZIP archives)
zip = "2"

# Shell completions
clap_complete = "4"

# WebSocket support (subscriptions)
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"

# Interactive REPL (readline, history, tab completion)
rustyline = "15"

# Self-update (download + extract + replace binary)
self-replace = "1"
flate2 = "1"
tar = "0.4"
uuid = { version = "1.22.0", features = ["v4"] }
